Fixed content wrapping bug

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -230,3 +230,8 @@ tr {
     padding-left: 10px;
     padding-right: 10px;
 }
+
+/* To ensure that long content in a table cells wraps */
+.wrap-content {
+    word-break: break-all;
+}
